# AzerothDock

./: Cargo.toml  Dockerfile  Dockerfile-original  README.md  docker-compose.yml
src/: main.rs
src/routes/: containers.rs  index.rs  mod.rs
static/: style.css
templates/: _sidebar.html.tera  container_details.html.tera  containers.html.tera  index.html.tera
