[package]
name = "azeroth_dock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0" # Use the latest version of Rocket
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
bollard = "*"
tokio = { version = "1", features = ["full"] }
futures = "0.3"